--- a/src/pages/projects/style.module.css
+++ b/src/pages/projects/style.module.css
@@ -3,20 +3,9 @@
   flex-direction: column;
   gap: 2em;
 }
-.projects header {
+.header{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  line-height: 1;
-}
-
-.newproject{
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-  max-width: 400px;
-  margin: 0 auto;
-}
-.newproject header{
-  text-align: center;
+  gap: 2em;
 }
