--- a/src/core/header/style.module.css
+++ b/src/core/header/style.module.css
@@ -1,8 +1,9 @@
 .header{
-  background: #222;
-  padding: 1em 10%;
+  width: 100%;
+  padding: .4em 10%;
+  margin-bottom: 2em;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 2em;
+  background: #222;
 }
