--- a/src/core/nav/style.module.css
+++ b/src/core/nav/style.module.css
@@ -1,12 +1,13 @@
 .nav{
-  list-style: none;
   display: flex;
   gap: 1em;
+  list-style: none;
 }
 .nav li a{
   color: #fff;
   text-decoration: none;
+  transition: .4s;
 }
 .nav li a:hover{
-  color: #ffdd22;
+  color: rgb(var(--orange));
 }
