--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,15 @@
   box-sizing: border-box;
 }
 
+:root{
+  --orange: 255, 197, 91;
+  --gray: 34, 34, 34;
+  --infrastructure: 29, 88, 92;
+  --development: 23, 184, 181;
+  --design: 160, 37, 201;
+  --planning: 134, 159, 20;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
