--- a/src/shared/components/alert/style.module.css
+++ b/src/shared/components/alert/style.module.css
@@ -1,12 +1,13 @@
 .alert{
-  padding: .5em .7em;
+  padding: .5em;
+  border-radius: .3em;
 }
-.success{
+.alert.success{
   color: #155724;
   background-color: #d4edda;
   border-color: #c3e6cb;
 }
-.danger{
+.alert.danger{
   color: #721c24;
   background-color: #f8d7da;
   border-color: #f5c6cb;
